--- a/package.json
+++ b/package.json
@@ -1,4 +1,28 @@
 {
   "name": "adl-tools",
-  "packageManager": "yarn@4.5.0"
+  "type": "module",
+  "main": "index.js",
+  "packageManager": "yarn@4.5.0",
+  "scripts": {
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-lambda": "node --require ./.pnp.cjs --loader ./.pnp.loader.mjs dist/index.js test-lambda"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@types/figlet": "^1.5.8",
+    "@types/node": "^22.7.4",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-package": "^1.4.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-lambda": "^3.659.0",
+    "commander": "^12.1.0",
+    "figlet": "^1.7.0"
+  }
 }
